Fixing issue w/ text being cut off in the menu

--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -40,8 +40,7 @@ html {
 
 #menu {
     background-color: $color-lightest;
-    padding: 10px;
-    width: 72px;
+    padding: 8px;
 }
 
 #content {
